# Lutris-scripts

./: README.md
Carmageddon 1/: Carmanative.sh  (+18 more)
Roblox/grapejuice/: .gitlab-ci.yml  CONTRIBUTING.md  README.md  depends.sh  install.py  install.sh  pylintrc  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
Roblox/grapejuice/documentation/: astro.config.mjs  make-sitemap.py  package.json  pnpm-lock.yaml  tailwind.config.cjs
Roblox/grapejuice/documentation/src/components/: StarlightIcon.svelte  StarlightIcons.ts  Tip.svelte
Roblox/grapejuice/documentation/src/docs/: Android.md  Installing-Graphics-Libraries.md  Installing-Wine.md  Installing-from-flatpak.md  Installing-from-package.md  Installing-from-source.md  Performance-Tweaks.md  Troubleshooting.md  index.md
Roblox/grapejuice/documentation/src/partials/: 32bit-arch.md  32bit-debian.md  finito.md  flatpak-button.md  flatpak-reference.mdx  package-arch.mdx  package-debian.md  source-arch.md  source-debian.md  wine-preamble.svelte
Roblox/grapejuice/documentation/tools/: build.py  requirements.txt
Roblox/grapejuice/src/grapejuice/: __init__.py  first_time_setup.py  tasks.py
Roblox/grapejuice/src/grapejuice/cli/: cli_common.py  gui.py  main.py
Roblox/grapejuice/src/grapejuice/components/: fast_flag_components.py
Roblox/grapejuice/src/grapejuice_common/: errors.py  paths.py  roblox_product.py  uninstall.py  update_info_providers.py  variables.py
Roblox/grapejuice/src/grapejuice_packaging/: local_install.py
Roblox/grapejuice/tests/: conftest.py  test_launch_uri.py  test_wineprefix.py
(+90 files in other folders)
